[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "drf-crypto"
authors = [{ name = "Xurvan" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]

[project.urls]
Source = "https://github.com/xanigo/drf-crypto"

[tool.flit.module]
name = "drf_crypto"
