[project]
name = "drf-crypto"
version = "0.1.0"
description = "Provide crypto payment essential to the drf-shop"
authors = [
    { name = "Xurvan", email = "xurvan@tutanota.com" },
]
dependencies = [
    "drf-shop>=0.1.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "Apache-2.0" }
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=2.20.0",
]
