[project]
name = "drf-crypto"
description = "Provide crypto payment essential to the drf-shop"
authors = [
    { name = "Xurvan", email = "xurvan@tutanota.com" },
]
dependencies = [
    "drf-shop>=0.1.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]

[project.urls]
source = "https://github.com/xanigo/drf-crypto"

[project.optional-dependencies]
dev = [
    "pre-commit>=2.20.0",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
version = { source = "file", path = "drf_crypto/__init__.py" }

[tool.pdm.dev-dependencies]
